#22 fix test of mergeSort (generics not showing)

--- a/elan/media/elanStyle.css
+++ b/elan/media/elanStyle.css
@@ -39,11 +39,11 @@ header, constant, main, procedure, function, enum, classDef, constructor, proper
 }
 
 /* Frame selection */
-.selected > * , .selected clause *{
+.selected > * , .selected > clause *{
     border-left-color: rgb(174, 216, 250);
 }
 
-.selected clause *, .selected top *, .selected > keyword {
+.selected > clause *, .selected > top, .selected > top *, .selected > keyword {
     background-color: rgb(174, 216, 250);
     border-right-color: rgb(174, 216, 250);
 }
